infrastructure/traefik-dashboard-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-external
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.home.example.home`)
    kind: Rule
    services:
    - kind: TraefikService
      name: api@internal
  tls:
    secretName: traefik-dashboard-tls
